plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.dev'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	google()
	// 공식 서버가 막힐 때를 대비한 미러 사이트들 (안정성 확보)
	maven { url "https://repo1.maven.org/maven2/" }
	maven { url "https://maven.aliyun.com/repository/public" }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security' // 암호화용

	// JSON 처리를 위한 라이브러리
	implementation 'org.json:json:20231013'


	// AWS SDK v2 BOM
	implementation platform('software.amazon.awssdk:bom:2.29.1')

	// Athena 서비스 라이브러리
	implementation 'software.amazon.awssdk:athena'

	// S3 서비스 라이브러리 - 쿼리 결과 등을 핸들링할 때 필요
	implementation 'software.amazon.awssdk:s3'

	// AWS SDK v2 Bedrock Runtime
	implementation 'software.amazon.awssdk:bedrockruntime:2.25.15'

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//csv
	implementation 'com.opencsv:opencsv:5.7.1'

}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}